--- a/2019/10-06-imperial.tex
+++ b/2019/10-06-imperial.tex
@@ -302,28 +302,28 @@ backend=biber]{biblatex}
 
 \maketitle
 
-\begin{abstract}
-  The Navier--Stokes equations are of enormous practical importance in
-  science and industry, but are notoriously difficult to solve,
-  especially for large Reynolds number.
+% \begin{abstract}
+%   The Navier--Stokes equations are of enormous practical importance in
+%   science and industry, but are notoriously difficult to solve,
+%   especially for large Reynolds number.
 
-  In this talk, I will present a scalable multilevel preconditioner
-  for the stationary incompressible form of these equations which
-  exhibits iteration counts almost independent of the Reynolds number
-  and mesh resolution.
+%   In this talk, I will present a scalable multilevel preconditioner
+%   for the stationary incompressible form of these equations which
+%   exhibits iteration counts almost independent of the Reynolds number
+%   and mesh resolution.
 
-  The implementation relies on a multigrid small patch additive
-  overlapping Schwarz smoother, and I will describe the computational,
-  and numerical analysis challenges in designing a robust choice.
+%   The implementation relies on a multigrid small patch additive
+%   overlapping Schwarz smoother, and I will describe the computational,
+%   and numerical analysis challenges in designing a robust choice.
 
-  I will present results using the Firedrake finite element library
-  solving problems with up to a billion degrees of freedom, and
-  describe some of the general preconditioning features that are now
-  available in Firedrake as a result of this work.
+%   I will present results using the Firedrake finite element library
+%   solving problems with up to a billion degrees of freedom, and
+%   describe some of the general preconditioning features that are now
+%   available in Firedrake as a result of this work.
 
-  This is joint work with Patrick Farrell and Florian Wechsung
-  (Oxford), and Ridg Scott (Chicago).
-\end{abstract}
+%   This is joint work with Patrick Farrell and Florian Wechsung
+%   (Oxford), and Ridg Scott (Chicago).
+% \end{abstract}
 
 
 
