--- a/2019/10-06-imperial.tex
+++ b/2019/10-06-imperial.tex
@@ -1071,7 +1071,7 @@ Obtained with IFISS v3.5, $Q_1-P_0$ element pair.}
 \begin{frame}
   \frametitle{Discrete complex --- 2D}
   \begin{center}
-    \includestandalone[width=0.75\textwidth]{./\jobname.figures/HCT-complex}
+    \includestandalone[width=0.75\textwidth]{./../pictures/HCT-complex}
   \end{center}
   \pause
   Requires bigger patch in smoother
